@@ -567,34 +567,34 @@ void ModuleManager::show_module(const char* name)
         cout << endl << Markup::head() << Markup::sanitize(name) << endl << endl;
 
         if ( const char* h = m->get_help() )
-            cout << "What: " << Markup::sanitize(h) << endl;
+            cout << endl << "What: " << Markup::sanitize(h) << endl;
 
-        cout << "Type: "  << mod_type(p->api) << endl;
+        cout << endl << "Type: "  << mod_type(p->api) << endl;
 
         if ( const Parameter* p = m->get_parameters() )
         {
             if ( p->type < Parameter::PT_MAX )
             {
-                cout << endl << "Configuration: " << endl;
+                cout << endl << "Configuration: " << endl << endl;
                 show_configs(name, true);
             }
         }
 
         if ( m->get_commands() )
         {
-            cout << endl << "Commands: " << endl;
+            cout << endl << "Commands: " << endl << endl;
             show_commands(name);
         }
 
         if ( m->get_rules() )
         {
-            cout << endl << "Rules: " << endl;
+            cout << endl << "Rules: " << endl << endl;
             show_rules(name);
         }
 
         if ( m->get_pegs() )
         {
-            cout << endl << "Peg counts: " << endl;
+            cout << endl << "Peg counts: " << endl << endl;
             show_pegs(name);
         }
     }
